# dsp-stuff

./: .clangd  .gitignore  CMakeLists.txt  README.md  jucewindow.cpp  pa_sine.cpp
adsr/: MainContentComponent.cpp  MainContentComponent.h  Window.cpp  Window.h  adsr.cpp
attackrelease/: attackrelease.cpp
common/: ADSREnvelope.cpp  ADSREnvelope.h  Signal.cpp  Signal.h  SineOscillator.cpp  SineOscillator.h
jucegraphics/: MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h  jucegraphics.cpp
sine/: sine.cpp
src/: pa_sine.cpp  sine.cpp
